# experiment-lab

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/agent_skills/: __init__.py  experiment_lab_cli.py
app/api/: __init__.py  alerts.py  apify_client.py  apify_ingestion.py  artifacts.py  chat.py  dashboard_spec.py  forecasts.py  history_store.py  main.py  monitoring_plan.py  n8n_emitter.py  refresh.py  schemas.py  sentiment_metrics.py  sessions.py  storage.py  user_context.py
app/demo_data/: reputation_monitor_external.json  reputation_monitor_external.ndjson  reputation_monitor_external_raw.ndjson  reputation_monitor_internal.json  reputation_monitor_internal.ndjson  supply_chain_risk_external.json  supply_chain_risk_external.ndjson  supply_chain_risk_external_raw.ndjson  supply_chain_risk_internal.json  supply_chain_risk_internal.ndjson
app/export/: __init__.py  frontend_bundle.py
app/labs/: __init__.py  base.py  critic.py  decision_cards.py  helpers.py  registry.py  runner.py  schemas.py  selection.py
app/modeling/: sentiment.py
app/static/: index.html
app/static_react/: index.html
fixtures/: apify_reputation_reviews.json
scripts/: download_sentiment_model.py  sf_mcp_probe.py  smoke_test_sentiment.py  test_apify_to_sentiment.py
tests/: test_api_slice.py  test_decision_cards.py  test_experiment_lab_skill_cli.py  test_lab_critic.py  test_lab_runner.py  test_lab_schemas.py  test_reputation_labs.py  test_supply_chain_labs.py  test_text_engine.py
(+32 files in other folders)
