[project]
name = "experiment-lab"
version = "0.1.0"
description = "Portable Signal Foundry labs template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.0",
    "huggingface-hub>=1.19.0",
    "polars>=1.40.1",
    "protobuf>=7.35.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "safetensors>=0.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "uvicorn>=0.36.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
